[gd_scene load_steps=3 format=3 uid="uid://b348a1qhcxm7v"]

[ext_resource type="Script" uid="uid://3tl5v6bsi5li" path="res://juego/objetos/estrellas/estrellas.gd" id="1_776pf"]
[ext_resource type="Texture2D" uid="uid://bp45uply0mfm4" path="res://assets/imagenes/estrella.png" id="1_j4j3j"]

[node name="HBoxContainer" type="HBoxContainer"]
texture_filter = 2
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.0015, 1)
theme_override_constants/separation = 5
script = ExtResource("1_776pf")

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 2
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Estrella1" type="TextureRect" parent="MarginContainer"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("1_j4j3j")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer3" type="MarginContainer" parent="."]
texture_filter = 2
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Estrella3" type="TextureRect" parent="MarginContainer3"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("1_j4j3j")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="."]
texture_filter = 2
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Estrella2" type="TextureRect" parent="MarginContainer2"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("1_j4j3j")
expand_mode = 3
stretch_mode = 5
